k8s/apps/visual-regression-tracker/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: visual-regression-tracker-ui
    app.kubernetes.io/name: visual-regression-tracker-ui
  name: visual-regression-tracker-ui
  namespace: visual-regression-tracker
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: visual-regression-tracker-ui
    app.kubernetes.io/name: visual-regression-tracker-ui
  type: ClusterIP
