k8s/apps/visual-regression-tracker/ui/network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: visual-regression-tracker-ui-ingress
  namespace: visual-regression-tracker
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app: visual-regression-tracker-ui
      app.kubernetes.io/name: visual-regression-tracker-ui
  policyTypes:
    - Ingress
